Edit header font-sizes to fit correctly on mobile devices

--- a/the_brighton_times_part2/css/responsive.css
+++ b/the_brighton_times_part2/css/responsive.css
@@ -21,7 +21,7 @@
 	}
 
 	.header__title {
-		font-size: 3em;
+		font-size: 1.5em;
 	    vertical-align: bottom; 
 	}
 
@@ -52,8 +52,8 @@
 		display: inline-block;
 		position: absolute;
 		right: 0;
-		font-size: 3em;
-		padding: .5em;
+		font-size: 2em;
+		padding: 1em;
 	}
 }
 
